Bug 1707348 - Call SnapBackOverscrolledApzcForMomentum instead of StartOverscrollAnimation in OnPanEnd. r=botond

It makes sure that overscroll animations which have been cancelled by this pan
gesture will restart again.
The reason we don't use the existing SnapBackOverscrolledApzc is that
SnapBackOverscrolledApzc function ends up calling ScrollSnap even if
it's not overscrolled, thus it will mess up subsequent momentum scrolling.

Differential Revision: https://phabricator.services.mozilla.com/D114928